Add two-step supervised without aggregation over time

--- a/index.html
+++ b/index.html
@@ -87,6 +87,31 @@ MathJax = {
     <td>
     </td>
   </tr>
+  <tr>
+    <td>
+      <p><b>sup-2-none-false-primal</b></p>
+      <p>two-step supervised training with loss only at final state</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-2-none-false-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-2-none-false-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-2-none-false-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-2-none-false-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-2-none-false-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+  </tr>
   </tbody>
 </table> 
 
