add up to sup-4-none-true setup

--- a/index.html
+++ b/index.html
@@ -112,6 +112,85 @@ MathJax = {
     <td>
     </td>
   </tr>
+  <tr>
+    <td>
+      <p><b>sup-3-none-true-primal</b></p>
+      <p>three-step supervised training with aggregation over time</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-3-none-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-3-none-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-3-none-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-3-none-true-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-3-none-true-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>sup-3-none-false-primal</b></p>
+      <p>three-step supervised training with loss only at final state</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-3-none-false-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-3-none-false-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-3-none-false-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-3-none-false-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-3-none-false-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>sup-4-none-true-primal</b></p>
+      <p>four-step supervised training with aggregation over time</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-4-none-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-4-none-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-4-none-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-4-none-true-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-4-none-true-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>sup-4-none-true-cut_every_2_net_bptt</b></p>
+      <p>stop backpropagation through time over the network every two network calls</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-4-none-true-cut_every_2_net_bptt.svg">
+      </p>
+    </td>
   </tbody>
 </table> 
 
