--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ MathJax = {
 <p class="text-center">
   <a href="https://twitter.com/felix_m_koehler?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @felix_m_koehler</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </p>
+<p class="text-center">
+  💡 right-click and open in a new tab to get the flow charts in full size
+</p>
 
 <table class="table table-striped table-hover text-center">
   <thead>
