Add simplest mixed-chain scenarios

--- a/index.html
+++ b/index.html
@@ -194,6 +194,50 @@ MathJax = {
         <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-4-none-true-cut_every_2_net_bptt.svg">
       </p>
     </td>
+  </tr>
+  <!-- <tr>
+    <td><b>Mixed-Chain Setups</b></td>
+    <td colspan="3"></td>
+  </tr> -->
+  <tr>
+    <td>
+      <p><b>mix-1-1-true-primal</b></p>
+      <p>mixed-chain with one network followed by one physics step with aggregation over time</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-1-1-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>mix-1-1-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-1-1-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>mix-1-1-false-primal</b></p>
+      <p>mixed-chain with one network followed by one physics step with loss only at final state</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-1-1-false-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>mix-1-1-false-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-1-1-false-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
   </tbody>
 </table> 
 
