Also add mix-2-1 setups

--- a/index.html
+++ b/index.html
@@ -238,6 +238,57 @@ MathJax = {
     </td>
     <td>
     </td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>mix-2-1-true-primal</b></p>
+      <p>mixed-chain with two network followed by one physics step with aggregation over time</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-2-1-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>mix-2-1-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-2-1-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>mix-2-1-true-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-2-1-true-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>mix-2-1-false-primal</b></p>
+      <p>mixed-chain with two network followed by one physics step with loss only at final state</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-2-1-false-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>mix-2-1-false-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-2-1-false-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>mix-2-1-false-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-2-1-false-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+  </tr>
   </tbody>
 </table> 
 
