add diverted chain setups

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ MathJax = {
       <th>Reverse-1</th>
       <th>Reverse-2</th>
       <th>Reverse-3</th>
+      <th>Reverse-4</th>
     </tr>
   <tbody>
   <!-- <tr>
@@ -59,6 +60,8 @@ MathJax = {
       <p>
         <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-1-none-true-full_gradient.svg">
       </p>
+    </td>
+    <td>
     </td>
     <td>
     </td>
@@ -89,6 +92,8 @@ MathJax = {
     </td>
     <td>
     </td>
+    <td>
+    </td>
   </tr>
   <tr>
     <td>
@@ -111,6 +116,8 @@ MathJax = {
       <p>
         <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-2-none-false-no_net_bptt.svg">
       </p>
+    </td>
+    <td>
     </td>
     <td>
     </td>
@@ -139,6 +146,8 @@ MathJax = {
     </td>
     <td>
     </td>
+    <td>
+    </td>
   </tr>
   <tr>
     <td>
@@ -161,6 +170,8 @@ MathJax = {
       <p>
         <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-3-none-false-no_net_bptt.svg">
       </p>
+    </td>
+    <td>
     </td>
     <td>
     </td>
@@ -194,6 +205,8 @@ MathJax = {
         <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/sup-4-none-true-cut_every_2_net_bptt.svg">
       </p>
     </td>
+    <td>
+    </td>
   </tr>
   <!-- <tr>
     <td><b>Mixed-Chain Setups</b></td>
@@ -218,6 +231,8 @@ MathJax = {
     </td>
     <td>
     </td>
+    <td>
+    </td>
   </tr>
   <tr>
     <td>
@@ -233,6 +248,8 @@ MathJax = {
       <p>
         <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/mix-1-1-false-full_gradient.svg">
       </p>
+    </td>
+    <td>
     </td>
     <td>
     </td>
@@ -263,6 +280,8 @@ MathJax = {
     </td>
     <td>
     </td>
+    <td>
+    </td>
   </tr>
   <tr>
     <td>
@@ -287,6 +306,49 @@ MathJax = {
       </p>
     </td>
     <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+  <!-- <tr>
+    <td><b>Mixed-Chain Setups</b></td>
+    <td colspan="3"></td>
+  </tr> -->
+  <tr>
+    <td>
+      <p><b>div-1-1-true-primal</b></p>
+      <p>diverted-chain with one main step and one branch step</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-1-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-1-1-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-1-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-1-1-true-no_dp</b></p>
+      <p>no differentiable physics</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-1-true-no_dp.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-1-1-true-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-1-true-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-1-1-true-no_dp-no_net_bptt</b></p>
+      <p>no differentiable physics and no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-1-true-no_dp-no_net_bptt.svg">
+      </p>
     </td>
   </tr>
   </tbody>
