--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ MathJax = {
     </td>
   </tr>
   <!-- <tr>
-    <td><b>Mixed-Chain Setups</b></td>
+    <td><b>Diverted-Chain Setups</b></td>
     <td colspan="3"></td>
   </tr> -->
   <tr>
