Add diverted chain setups with two main length

--- a/index.html
+++ b/index.html
@@ -351,6 +351,25 @@ MathJax = {
       </p>
     </td>
   </tr>
+  <tr>
+    <td>
+      <p><b>div-2-1-true-primal</b></p>
+      <p>diverted chain with two main steps and one branch step</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-2-1-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-2-1-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-2-1-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>todo</td>
+    <td>todo</td>
+    <td>todo</td>
+  </tr>
   <!-- <tr>
     <td><b>Teacher Forcing Setups</b></td>
     <td colspan="3"></td>
