Add more diverted chain setups

--- a/index.html
+++ b/index.html
@@ -370,6 +370,63 @@ MathJax = {
     <td>todo</td>
     <td>todo</td>
   </tr>
+  <tr>
+    <td>
+      <p><b>div-3-1-true-primal</b></p>
+      <p>diverted chain with three main steps and one branch step</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-3-1-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-3-1-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-3-1-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>todo</td>
+    <td>todo</td>
+    <td>todo</td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>div-1-2-true-primal</b></p>
+      <p>diverted chain with one main step and two branch steps</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-2-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-1-2-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-2-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>todo</td>
+    <td>todo</td>
+    <td>todo</td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>div-1-2-false-primal</b></p>
+      <p>diverted chain with one main step and two branch steps with loss only at final state of the branch</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-2-false-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-1-2-false-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-1-2-false-full_gradient.svg">
+      </p>
+    </td>
+    <td>todo</td>
+    <td>todo</td>
+    <td>todo</td>
+  </tr>
   <!-- <tr>
     <td><b>Teacher Forcing Setups</b></td>
     <td colspan="3"></td>
