Add diverted chain setups with longer branch lengths and 2 main length

--- a/index.html
+++ b/index.html
@@ -427,6 +427,44 @@ MathJax = {
     <td>todo</td>
     <td>todo</td>
   </tr>
+  <tr>
+    <td>
+      <p><b>div-2-2-true-primal</b></p>
+      <p>diverted chain with two main steps and two branch steps</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-2-2-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-2-2-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-2-2-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>todo</td>
+    <td>todo</td>
+    <td>todo</td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>div-2-2-false-primal</b></p>
+      <p>diverted chain with two main steps and two branch steps with loss only at final state of the branch</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-2-2-false-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>div-2-2-false-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/div-2-2-false-full_gradient.svg">
+      </p>
+    </td>
+    <td>todo</td>
+    <td>todo</td>
+    <td>todo</td>
+  </tr>
   <!-- <tr>
     <td><b>Teacher Forcing Setups</b></td>
     <td colspan="3"></td>
