Add residuum-based training setups

--- a/index.html
+++ b/index.html
@@ -545,6 +545,60 @@ MathJax = {
     <td>
     </td>
   </tr>
+  <!-- <tr>
+    <td><b>Residuum-based Setups</b></td>
+    <td colspan="3"></td>
+  </tr> -->
+  <tr>
+    <td>
+      <p><b>res-1-none-false-primal</b></p>
+      <p>one-step residuum training</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-1-none-false-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>res-1-none-false-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-1-none-false-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p><b>res-2-none-true-primal</b></p>
+      <p>two-step residuum training with aggregation over time</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-2-none-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>res-2-none-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-2-none-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>res-2-none-true-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-2-none-true-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
+
 
   </tbody>
 </table> 
