Add three-step residuum learning

--- a/index.html
+++ b/index.html
@@ -598,6 +598,33 @@ MathJax = {
     <td>
     </td>
   </tr>
+  <tr>
+    <td>
+      <p><b>res-3-none-true-primal</b></p>
+      <p>three-step residuum training with aggregation over time</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-3-none-true-primal.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>res-3-none-true-full_gradient</b></p>
+      <p>full gradient</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-3-none-true-full_gradient.svg">
+      </p>
+    </td>
+    <td>
+      <p><b>res-3-none-true-no_net_bptt</b></p>
+      <p>no backpropagation through time over the network</p>
+      <p>
+        <img class="img-fluid" src="https://ceyron.github.io/predictor-learning-setups/res-3-none-true-no_net_bptt.svg">
+      </p>
+    </td>
+    <td>
+    </td>
+    <td>
+    </td>
+  </tr>
 
 
   </tbody>
