Add ToDo remark

--- a/index.html
+++ b/index.html
@@ -594,8 +594,10 @@ MathJax = {
       </p>
     </td>
     <td>
+    Todo
     </td>
     <td>
+    Todo
     </td>
   </tr>
   <tr>
@@ -621,8 +623,10 @@ MathJax = {
       </p>
     </td>
     <td>
+    Todo
     </td>
     <td>
+    Todo
     </td>
   </tr>
 
